<resources>
    <string name="app_name">My Calculator</string>
    <string name="basic">Basic</string>
    <string name="scientific">Scientific</string>
    <string name="bmi">BMI</string>
    <string name="interest">Interest</string>
    <string name="conversion">Conversion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>